add presenter without 3 fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,17 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "noImplicitAny": false,
+    "isolatedModules": true
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/lead2connect-presenter/node_modules",
+    "dist"
   ]
 }
