--- a/package.json
+++ b/package.json
@@ -7,10 +7,21 @@
     "@types/node": "11.9.5",
     "@types/react": "16.8.4",
     "@types/react-dom": "16.8.2",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
+    "draftjs-to-html": "^0.8.4",
+    "formik": "^1.5.1",
+    "lodash": "^4.17.11",
+    "lodash-es": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "query-string": "^6.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.5",
-    "typescript": "3.3.3333"
+    "react-select": "^2.4.1",
+    "typescript": "^3.3.3333",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
