--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "draftjs-to-html": "^0.8.4",
     "formik": "^1.5.1",
+    "lead2connect-presenter": "git+https://l2cpullbot:shared5511@github.com/rd-dev-ukraine/lead2connect-presenter.git",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "node-sass": "^4.11.0",
