--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@types/react-dom": "16.8.2",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "cross-env": "^5.2.0",
     "draftjs-to-html": "^0.8.4",
     "formik": "^1.5.1",
-    "lead2connect-presenter": "git+https://l2cpullbot:shared5511@github.com/rd-dev-ukraine/lead2connect-presenter.git",
+    "lead2connect-presenter": "git+https://l2cpullbot:shared5511@github.com/jonasb01/lead2connect-presenter.git",
     "lodash": "^4.17.11",
     "lodash-es": "^4.17.11",
     "node-sass": "^4.11.0",
